--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <p>&nbsp;</p>
 <p><span style="font-weight: 400;">Brian Ketelsen</span></p>
 <p><span style="font-weight: 400;">Docker user since 2013</span></p>
+<p><span style="font-weight: 400;">Kris Nova</span></p>
+<p><span style="font-weight: 400;">Docker user since 2014, Kubernetes maintainer</span></p>
 <br/>
 <br/>
 <p><span style="font-weight: 400;"><a href="https://github.com/bketelsen/openletter">Cosign this letter with a pull request.</a></span></p>
