--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p><span style="font-weight: 400;">Docker user since 2013</span></p>
 <br/>
 <p><span style="font-weight: 400;">Kris Nova</span></p>
-<p><span style="font-weight: 400;">Docker user since 2014, Kubernetes maintainer</span></p>
+<p><span style="font-weight: 400;">Docker user since 2014</span></p>
 <br/>
 <p><span style="font-weight: 400;">Joseph Jacks</span></p>
 <p><span style="font-weight: 400;">Docker user since 2013</span></p>
