--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 <p><span style="font-weight: 400;">Adam Glassman</span></p>
 <p><span style="font-weight: 400;">Docker user since 2015</span></p>
 <br/>
+<p><span style="font-weight: 400;">Paddy Carver</span></p>
+<p><span style="font-weight: 400;">Docker user since 2013</span></p>
+<br/>
 <br/>
 <p><span style="font-weight: 400;"><a href="https://github.com/bketelsen/openletter">Cosign this letter with a pull request.</a></span></p>
 <h1 style="color: #5e9ca0;"><strong><br /><br /></strong></h1>
