--- a/index.html
+++ b/index.html
@@ -26,5 +26,15 @@
 <br/>
 <p><span style="font-weight: 400;"><a href="https://github.com/bketelsen/openletter">Cosign this letter with a pull request.</a></span></p>
 <h1 style="color: #5e9ca0;"><strong><br /><br /></strong></h1>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-98351238-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
