--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 <p><span style="font-weight: 400;">Tom Jowitt</span></p>
 <p><span style="font-weight: 400;">Docker user since 2014</span></p>
 <br/>
+<p><span style="font-weight: 400;">Ashley McNamara</span></p>
+<p><span style="font-weight: 400;">Docker user since 2014</span></p>
+<br/>
 <p><span style="font-weight: 400;"><a href="https://github.com/bketelsen/openletter">Cosign this letter with a pull request.</a></span></p>
 <h1 style="color: #5e9ca0;"><strong><br /><br /></strong></h1>
 <script>
