--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <h1 style="color: #5e9ca0;"><strong><strong>&nbsp;</strong></strong></h1>
 <p><span style="font-weight: 400;">May 1, 2017</span></p>
 <p>&nbsp;</p>
-<p><span style="font-weight: 400;">Ben Golub</span></p>
+<p><span style="font-weight: 400;">Steve Singh</span></p>
 <p><span style="font-weight: 400;">Solomon Hykes</span></p>
 <p><span style="font-weight: 400;">Docker, Inc.</span></p>
 <p><span style="font-weight: 400;">144 Townsend Street</span></p>
 <p><span style="font-weight: 400;">San Francisco, CA 94107</span></p>
 <p style="color: #5e9ca0;"><strong><strong>&nbsp;</strong></strong></p>
-<p><span style="font-weight: 400;">Mr. Golub, Mr. Hykes:</span></p>
+<p><span style="font-weight: 400;">Mr. Singh, Mr. Hykes:</span></p>
 <p><span style="font-weight: 400;">As an active member of the Go, Docker, and Kubernetes communities, I&rsquo;m at a loss for words with regards to the lack of management intervention in both past and recent incidents of harassment of colleagues in the community by Docker team members.</span></p>
 <p><span style="font-weight: 400;">Our communities are the only reason that we succeed, and for that success to be viable long term, each member of the community must feel safe, valued, and comfortable. &nbsp;As a corporation, Docker is responsible for the behavior of its employees in public and private spaces when they operate under the purview of Docker&rsquo;s umbrella. &nbsp;Your responsibility goes beyond the fiduciary responsibility to your shareholders; it extends to your customers, vendors, partners, and users. &nbsp;Your success hinges on your ability to provide value to customers, and that can only be done with the help and evangelism of a happy and prosperous community.</span></p>
 <p><span style="font-weight: 400;">The Go, Docker, and Kubernetes communities are not willing to accept harassment in any form. &nbsp;As a member of these communities, I demand better than this of myself and those around me. &nbsp;This group of people has been the most caring and welcoming group I&rsquo;ve ever seen in more than 25 years of programming. &nbsp;I refuse to stand by idly and allow bad actors to destroy the goodwill and harmony we&rsquo;ve worked so hard to achieve. &nbsp;Our community is great because we made it this way. &nbsp;Each of us: your users, your contributors, your partners, and your employees have chosen to belong to this group not just because of the value of a container solution, but because of the value of the community of helpful and caring people that comes with it.</span></p>
