--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 <p><span style="font-weight: 400;">Erik St. Martin</span></p>
 <p><span style="font-weight: 400;">Docker user since 2013</span></p>
 <br/>
+<p><span style="font-weight: 400;">Tyler Britten</span></p>
+<p><span style="font-weight: 400;">Docker user since 2014</span></p>
+<br/>
 <p><span style="font-weight: 400;"><a href="https://github.com/bketelsen/openletter">Cosign this letter with a pull request.</a></span></p>
 <h1 style="color: #5e9ca0;"><strong><br /><br /></strong></h1>
 <script>
