--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 <br/>
 <p><span style="font-weight: 400;">Kevin Cantwell</span></p>
 <p><span style="font-weight: 400;">Docker user since 2015</span></p>
+<br/>
+<p><span style="font-weight: 400;">Jason Kennedy</span></p>
+<p><span style="font-weight: 400;">Docker user since 2016</span></p>
 
 <br/>
 <p><span style="font-weight: 400;"><a href="https://github.com/bketelsen/openletter">Cosign this letter with a pull request.</a></span></p>
